@@ -579,7 +579,7 @@ GType gimp_color_profile_policy_get_type (void) G_GNUC_CONST;
 
 typedef enum  /*< pdb-skip >*/
 {
-  GIMP_COLOR_PROFILE_POLICY_ASK,    /*< desc="Ask"                      >*/
+  GIMP_COLOR_PROFILE_POLICY_ASK,    /*< desc="Ask what to do"           >*/
   GIMP_COLOR_PROFILE_POLICY_KEEP,   /*< desc="Keep embedded profile"    >*/
   GIMP_COLOR_PROFILE_POLICY_CONVERT /*< desc="Convert to RGB workspace" >*/
 } GimpColorProfilePolicy;
